--- a/src/components/CreatePost/TypeItem/TypeItem.module.css
+++ b/src/components/CreatePost/TypeItem/TypeItem.module.css
@@ -26,7 +26,7 @@
     display: none;
 }
 
-@media (max-width: 535px) {
+@media (max-width: 600px) {
     .typeItem {
         padding: 10px 0;
         margin-right: 12px;
