--- a/src/components/CreatePost/TypeList/TypeList.module.css
+++ b/src/components/CreatePost/TypeList/TypeList.module.css
@@ -7,7 +7,7 @@
     display: none;
 }
 
-@media (max-width: 535px) {
+@media (max-width: 600px) {
     .typeList {
         width: 100%;
         flex-wrap: wrap;
